[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forexfactory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "curl_cffi>=0.13.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
forexfactory = "forexfactory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
