[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forexfactory"
version = "1.1.1"
description = "Cached Forex Factory economic calendar data provider"
readme = "README.md"
authors = [{name = "Thomas Quant"}]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = [
    "forex-factory",
    "economic-calendar",
    "parquet",
    "cache",
    "scraper",
    "finance",
    "trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl_cffi>=0.13.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pandas-stubs>=3.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/thomas-quant/forexfactory"
Repository = "https://github.com/thomas-quant/forexfactory"

[project.scripts]
forexfactory = "forexfactory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"forexfactory" = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
files = "src/forexfactory"
strict = true

[[tool.mypy.overrides]]
module = ["curl_cffi.*"]
ignore_missing_imports = true
